[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"
authors = ["Alix mauro <alixmauro@gmail.com>"]
description = "Solutions to Advent of Code 2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"